# kinect2_skeleton_tracker_win

./: BodyBasics-D2D.vcxproj  BodyBasics.cpp  CMakeLists.txt  ZmqSkeletonPublisher.cpp  ZmqSkeletonPublisher.h  package.xml  stdafx.h
